# AircraftModelDev

./: .gitignore  CMakeLists.txt  README.md
MatlabHelper/: fyControl.m  gzControl.m  phControl.m  show.m  show2.m  simple_td.m  td.m
MatlabHelper/AGM86C/: TL.m  aero.m
MatlabHelper/BGM/: TL.m
MatlabHelper/GPI/: aero.m
MatlabHelper/HACM/: TL.m  aero.m
MatlabHelper/HXD/: TL.m
MatlabHelper/LRHW/: TL.m  aero.m
MatlabHelper/PAC2/: TL.m  aero.m
MatlabHelper/SM6/: TL.m  aero.m
MatlabHelper/Su27/: aero.m
Test/: CMakeLists.txt
Test/TGC/: CMakeLists.txt  main.cpp
doc/: 飞行器建模与制导控制设计文档.docx
include/TGC/: CommonStructs.h  Control.h  Engine.h  FileSaver.h  Guidance.h  IMU.h  Seeker.h  TGCMissile.h
include/Util/: Aerodynamics.h  Atmosphere.h  CJulian.h  Constants.h  CoordinateHelper.h  DateTime.h  Dynamics.h  Kinematics.h  State.h  TimeAccuracy.h  TimeSpan.h
src/: CMakeLists.txt
src/TGC/: CMakeLists.txt  Control.cpp  Engine.cpp  FileSaver.cpp  Guidance.cpp  IMU.cpp  Seeker.cpp  TGCMissile.cpp
src/Util/: Aerodynamics.cpp  Atmosphere.cpp  CJulian.cpp  CMakeLists.txt  Constants.cpp  CoordinateHelper.cpp  DateTime.cpp  Dynamics.cpp  Kinematics.cpp  TimeAccuracy.cpp  TimeSpan.cpp  nrlmsise-00.cpp
